# Data-Structure

./: CMakeLists.txt
Lab0/: CMakeLists.txt  Service.cpp  Service.h  Tasks.cpp  Tasks.h  main.cpp
Lab1/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  Events.cpp  Main.cpp  Service.cpp  Service.h
Lab2/: Actions.cpp  Actions.h  CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  main.cpp
Lab3/: CMakeLists.txt
Lab4/: CMakeLists.txt
Lab4/Menu/: MenuDictionary.cpp
Lab5/: CMakeLists.txt
