cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory("${PROJECT_SOURCE_DIR}/Lab0")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab1")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab2")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab3")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab4")
add_subdirectory("${PROJECT_SOURCE_DIR}/Lab5")